# NaperianNetCDF

./: CHANGELOG.md  Main.hs  NaperianExample.cabal  NaperianExample.hs  NaperianNetCDF.cabal  NaperianNetCDF.lhs
Data/Naperian/: NetCDF.hs
test/: Main.hs
