cabal-version:       2.4

name:                NaperianExample
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Dominic Steinitz
maintainer:          dominic@steinitz.org
-- copyright:
category:            Math
extra-source-files:  CHANGELOG.md

executable NaperianExample
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    TypeOperators
  build-depends:       base ^>=4.12.0.0,
                       Naperian,
                       hnetcdf,
                       vector,
                       split
  -- hs-source-dirs:
  default-language:    Haskell2010
