cabal-version:       2.4

name:                NaperianExample
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Dominic Steinitz
maintainer:          dominic@steinitz.org
-- copyright:
category:            Math
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     NaperianExample
  build-depends:       base >=4.12 && <4.13,
                       Naperian,
                       hnetcdf,
                       vector,
                       split
  default-language:    Haskell2010

executable Main
  main-is:             Main.hs
  other-extensions:    TypeOperators
  build-depends:       base ^>=4.12.0.0,
                       NaperianExample,
                       Naperian,
                       hnetcdf
  hs-source-dirs:      test
  default-language:    Haskell2010
